[gd_scene load_steps=26 format=3 uid="uid://ccjonkgmxrqvf"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_5.gd" id="1_2pkde"]
[ext_resource type="PackedScene" uid="uid://dm5pnrut86llc" path="res://scenes/bullets/enemy_3_bullet.tscn" id="2_y7rqi"]
[ext_resource type="PackedScene" uid="uid://ccogpqp72dena" path="res://scenes/collectables/coin.tscn" id="3_xrkrx"]
[ext_resource type="Shader" path="res://scenes/enemies/hurt_shader.gdshader" id="4_mhubf"]
[ext_resource type="Texture2D" uid="uid://byt7dss2jn8e4" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-hojre_angreb.png" id="5_swerh"]
[ext_resource type="Texture2D" uid="uid://dfe3esi3dyhe7" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-hojre_idle_walk-2.png" id="6_pfify"]
[ext_resource type="Texture2D" uid="uid://djg7377f1nflm" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-ned_angreb.png" id="7_1dycw"]
[ext_resource type="Texture2D" uid="uid://byvu1aji8vjbv" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-ned_idle_walk-2.png" id="8_fxdx4"]
[ext_resource type="Texture2D" uid="uid://1apfyj7qpexq" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-op_angreb.png" id="9_mr1ya"]
[ext_resource type="Texture2D" uid="uid://c0eiybegtv3we" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-op_idle_walk-2.png" id="10_ukfei"]
[ext_resource type="Texture2D" uid="uid://dfox2xo0gt0r3" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-venstre_angreb.png" id="11_0tadw"]
[ext_resource type="Texture2D" uid="uid://bj7eb14w73brd" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-venstre_idle_walk-2.png" id="12_muxhb"]
[ext_resource type="Texture2D" uid="uid://dofmeu2ohwk3b" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-hojre_walk-1.png" id="13_v38t0"]
[ext_resource type="AudioStream" uid="uid://c4wowkb15wcng" path="res://sounds/Enemy1Sound.mp3" id="14_4duwj"]
[ext_resource type="Texture2D" uid="uid://b7cjcmq4ym28g" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-ned_walk-1.png" id="14_mr65i"]
[ext_resource type="Texture2D" uid="uid://cxdktks84mnsy" path="res://icon.svg" id="15_btg3c"]
[ext_resource type="Texture2D" uid="uid://dnvp3eybydsd7" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-op_walk-1.png" id="15_ryf4x"]
[ext_resource type="Texture2D" uid="uid://d28ykfhxcpyth" path="res://sprites/fjender/strong_base_enemy/strong-base-enemy-venstre_walk-1.png" id="16_ixttm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0dx8f"]
radius = 60.0
height = 164.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_emg7y"]
resource_local_to_scene = true
shader = ExtResource("4_mhubf")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = null

[sub_resource type="SpriteFrames" id="SpriteFrames_gqgte"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_swerh")
}, {
"duration": 1.0,
"texture": ExtResource("6_pfify")
}],
"loop": false,
"name": &"Angreb højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_1dycw")
}, {
"duration": 1.0,
"texture": ExtResource("8_fxdx4")
}],
"loop": false,
"name": &"Angreb ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mr1ya")
}, {
"duration": 1.0,
"texture": ExtResource("10_ukfei")
}],
"loop": false,
"name": &"Angreb op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_0tadw")
}, {
"duration": 1.0,
"texture": ExtResource("12_muxhb")
}],
"loop": false,
"name": &"Angreb venstre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pfify")
}],
"loop": true,
"name": &"Idle højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fxdx4")
}],
"loop": true,
"name": &"Idle ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ukfei")
}],
"loop": true,
"name": &"Idle op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_muxhb")
}],
"loop": true,
"name": &"Idle venstre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_v38t0")
}, {
"duration": 1.0,
"texture": ExtResource("6_pfify")
}],
"loop": true,
"name": &"Walk højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_mr65i")
}, {
"duration": 1.0,
"texture": ExtResource("8_fxdx4")
}],
"loop": true,
"name": &"Walk ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ryf4x")
}, {
"duration": 1.0,
"texture": ExtResource("10_ukfei")
}],
"loop": true,
"name": &"Walk op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ixttm")
}, {
"duration": 1.0,
"texture": ExtResource("12_muxhb")
}],
"loop": true,
"name": &"Walk venstre",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ch6lp"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_k3gd5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g8dfa"]
_data = {
"Hurt": SubResource("Animation_ch6lp"),
"RESET": SubResource("Animation_k3gd5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4nd4c"]
radius = 699.121

[node name="Enemy5" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_2pkde")
bullet_scene = ExtResource("2_y7rqi")
coin_scene = ExtResource("3_xrkrx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0dx8f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_emg7y")
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_gqgte")
animation = &"Angreb venstre"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_g8dfa")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="move_Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="attack_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShootingPoint" type="Marker2D" parent="."]

[node name="View" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_4nd4c")

[node name="Enemy1Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_4duwj")
volume_db = -5.0
bus = &"Sfx"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8125, 1.39063)
texture = ExtResource("15_btg3c")

[connection signal="timeout" from="move_Timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="attack_Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
